# fantasy-puck

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  PREDICTION_MODEL.md  TECHNICAL-CACHING.md
backend/: .env.development  .env.example  .gitignore  Cargo.toml  Dockerfile  fly.toml
backend/data/: historical_playoff_skater_totals.csv
backend/migrations/: 001_create_users_table.sql
backend/scripts/: parse_historical_playoff_skaters.py
backend/src/: config.rs  error.rs  lib.rs  main.rs  tuning.rs
backend/src/api/: mod.rs  response.rs  routes.rs
backend/src/api/dtos/: common.rs  conversion.rs  games.rs  insights.rs  match_day.rs  mod.rs  params.rs  players.rs  playoffs.rs  pulse.rs  race_odds.rs  rankings.rs  sleepers.rs  stats.rs  team_stats.rs  teams.rs
backend/src/api/handlers/: admin.rs  auth.rs  draft.rs  games.rs  insights.rs  league_stats.rs  leagues.rs  mod.rs  nhl_rosters.rs  players.rs  playoffs.rs  pulse.rs  race_odds.rs  rankings.rs  sleepers.rs  stats.rs  team_breakdown.rs  team_stats.rs  teams.rs
backend/src/auth/: jwt.rs  middleware.rs  password.rs
backend/src/db/: cache.rs  draft.rs  leagues.rs  mod.rs  players.rs  sleepers.rs  teams.rs  users.rs
backend/src/domain/: mod.rs
backend/src/domain/models/: db.rs  fantasy.rs  mod.rs  nhl.rs
backend/src/infra/: calibrate.rs  mod.rs  prediction.rs
backend/src/models/: fantasy.rs  nhl.rs
backend/src/nhl_api/: mod.rs  nhl.rs  nhl_constants.rs
backend/src/utils/: api.rs  backtest.rs  fantasy.rs  historical_seed.rs  mod.rs  nhl.rs  player_pool.rs  player_projection.rs  playoff_elo.rs  playoff_ingest.rs  race_sim.rs  scheduler.rs
backend/src/ws/: draft_hub.rs  handler.rs  mod.rs
backend/supabase/: config.toml
backend/supabase/migrations/: 20260411000000_fix_daily_rankings_constraint.sql  20260418000000_daily_rankings_team_index.sql  20260418100000_playoff_skater_game_stats.sql  20260418100001_historical_playoff_skater_totals.sql  20260418100002_playoff_game_results.sql  20260419000000_playoff_roster_cache.sql  20260420000000_nhl_mirror.sql  20260420010000_nhl_skater_edge.sql
(+252 files in other folders)
