[package]
name = "fantasy-hockey"
version = "1.3.1"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "migrate",
    "uuid",
] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.31"
chrono = "0.4.40"
chrono-tz = "0.10"
tokio-cron-scheduler = "0.13"
scraper = "0.22"
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }